@@ -6,7 +6,9 @@ Version 2.4:
 	* Don't respond to Introspect/Ping except on the right interface 
 	  (pointed out by Serkan Kaba <serkan_kaba -at- yahoo -dot- com>)
 	* Automatically unexport objects which go out of scope in the 
-	  parent program (don't hold a strong reference).
+	  parent program (don't hold a strong reference). This is now
+	  optional and not the default for 1. sanity and 2. a possible
+	  bug in the WeakReference workings in Sun.
 	* Add fallback objects---a single object can be called for any
 	  object under a given path prefix.
 	* Add support for localization of strings via gettext.
